# tox_testing_env

./: README.md  pyproject.toml  requirements.txt  tox.ini
config/: application_conf.ini  docker_application_conf.ini  test_application_conf.ini
infra/: clean_docker.sh  docker-compose.yml
src/: database.py  settings.py
src/api/: main.py
src/models/: item.py
src/use_cases/: __init__.py  create_item.py  get_item.py
tests/: conftest.py
tests/items/: test_items.py
