[tool.poetry]
name = "tox-testing-env"
version = "0.1.0"
description = ""
authors = ["mauudev <mtrigo1432@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"
httpx = "^0.26.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
tox = "^4.12.1"
tox-docker = "^4.1.0"
trio = "^0.24.0"
anyio = "^4.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
